I had change the H1 to an H2 and workded on few bugs like z-index for the nav

--- a/index.scss
+++ b/index.scss
@@ -33,8 +33,6 @@
   background: $gray-1000;
 }
 
-// cursor
-
 section {
   margin-bottom: 5rem;
   margin-inline: auto;
@@ -66,6 +64,9 @@ body {
     background: none;
     position: absolute;
     width: 100%;
+
+    z-index: 5;
+
     .content {
       display: flex;
       align-items: center;
@@ -166,15 +167,12 @@ body {
           width: 100%;
         }
 
-        h1 {
-          width: 100%;
-          max-width: 820px;
-        }
-
         p {
           width: 100%;
           max-width: 450px;
           color: $gray-100;
+
+          margin: 2.5rem 0;
 
           @media only screen and (max-width: 850px) {
             width: 80%;
@@ -199,7 +197,7 @@ body {
 
       img {
         position: absolute;
-        width: 35%;
+        width: 40%;
         right: 5%;
         top: 23.5%;
       }
