--- a/scss/_type.scss
+++ b/scss/_type.scss
@@ -63,6 +63,3 @@ p {
   margin-bottom: 1.5rem;
 }
 
-a:hover {
-  cursor: none;
-}
