--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -43,7 +43,7 @@
   }
 
   &:hover {
-    cursor: none;
+    cursor: pointer;
   }
 }
 
